test_cases/tests/axum/multiple_body_extractors.stderr
error: Only one body extractor can be applied
 --> tests/axum/multiple_body_extractors.rs:5:18
  |
5 | async fn handler(_: String, _: Bytes) {}
  |                  ^^^^^^^^^

error: Only one body extractor can be applied
 --> tests/axum/multiple_body_extractors.rs:5:29
  |
5 | async fn handler(_: String, _: Bytes) {}
  |                             ^^^^^^^^
